--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.25.0",
     "storyblok-js-client": "^4.2.0"
   },
   "devDependencies": {
