--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@heroicons/react": "^1.0.5",
+    "@mui/material": "^5.3.0",
     "axios": "^0.21.4",
     "next": "12.0.8",
     "react": "17.0.2",
