--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.25.0",
+    "react-syntax-highlighter": "^15.4.5",
     "storyblok-js-client": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.9",
     "@types/react": "17.0.38",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "autoprefixer": "^10.4.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
